--- a/app/globals.css
+++ b/app/globals.css
@@ -3,25 +3,41 @@
 @tailwind utilities;
 
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+  color-scheme: dark;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+.main::-webkit-scrollbar {
+  width: 18px;
+  border-style: solid;
+  border-color: #000;
+  border-width: 0px 0px 0px 1px;
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+.main:hover::-webkit-scrollbar-thumb {
+  background-color: rgba(82, 82, 82, 0.3);
+}
+
+.main::-webkit-scrollbar-thumb:hover {
+  background-color: rgba(82, 82, 82, 0.5);
+}
+
+::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: transparent;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: rgba(82, 82, 82, 0.5);
+}
+
+::-webkit-scrollbar-corner {
+  background-color: transparent;
+}
+
+.icon:hover ~ .title-on-icon {
+  visibility: visible;
+  opacity: 1;
 }
