--- a/app/globals.css
+++ b/app/globals.css
@@ -4,20 +4,21 @@
 
 :root {
   color-scheme: dark;
+  overflow: hidden;
 }
 
-.main::-webkit-scrollbar {
+.scroll::-webkit-scrollbar {
   width: 18px;
   border-style: solid;
   border-color: #000;
   border-width: 0px 0px 0px 1px;
 }
 
-.main:hover::-webkit-scrollbar-thumb {
+.scroll:hover::-webkit-scrollbar-thumb {
   background-color: rgba(82, 82, 82, 0.3);
 }
 
-.main::-webkit-scrollbar-thumb:hover {
+.scroll::-webkit-scrollbar-thumb:hover {
   background-color: rgba(82, 82, 82, 0.5);
 }
 
