Fix bug: click select tab when close tab. And complete check code button

--- a/app/globals.css
+++ b/app/globals.css
@@ -35,14 +35,14 @@
   background-color: transparent;
 }
 
-.icon:hover ~ .title-on-icon {
-  visibility: visible;
-  opacity: 1;
-}
 .ew-resizable {
   width: 360px;
 }
 
 .ew-slider {
   cursor: ew-resize;
+}
+
+.draggable-tab-drop-zone:hover ~ .tab-close-button {
+  background-color: blue;
 }
